--- a/client/scss/colors.scss
+++ b/client/scss/colors.scss
@@ -1,22 +1,10 @@
-/** Thanks to https://chir.ag/projects/name-that-color :) */
 :root {
-    --amethystSmoke: #9d9dbb;
-    --black: #0000;
-    --blumine: #225585;
-    --creamBrulee: #ffe89c;
-    --creamCan: #f3ce56;
-    --dodgerBlue: #0e94f7;
-    --dustyGray: #989898;
-    --froly: #f2817f;
-    --gallery: #eaeaea;
-    --goldenGrass: #dab129;
-    --hitPink: #ffa981;
-    --malibu: #6eb8fa;
-    --mercury: #e6e6e6;
-    --pastelGreen: #70d58e;
-    --pattensBlue: #dff6ff;
-    --silverChalice: #a9a9a9;
-    --tropicalRainForest: #00874d;
-    --turquoise: #46d3bb;
+    --dustStorm: #e3c9b7;
+    --error: #f00;
+    --gainsboro: #dcdcdc;
+    --gray: #808080;
+    --lightyellow: #ffffe0;
+    --paco: #4d4139;
     --white: #fff;
+    --yellow: #ff0;
 }
