--- a/client/pages/Main/components/DogsList/style.css
+++ b/client/pages/Main/components/DogsList/style.css
@@ -1,5 +1,5 @@
 .dogs {
     display: grid;
-    column-gap: 20px;
-    grid-auto-flow: column;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
