--- a/client/pages/Main/components/Uploader/style.css
+++ b/client/pages/Main/components/Uploader/style.css
@@ -1,40 +1,5 @@
 .uploader {
     display: grid;
     justify-content: center;
-    margin: 0 auto;
-    column-gap: 20px;
-    grid-template-columns: auto auto;
-}
-
-.uploader__file {
-    display: flex;
-    width: 200px;
-    height: 300px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px dashed gainsboro;
-}
-
-.uploader__drag {
-    color: gainsboro;
-}
-
-.uploader__preview {
-    width: 200px;
-    height: 300px;
-    background-color: gainsboro;
-}
-
-.uploader__image {
-    object-fit: cover;
-}
-
-.uploader__button {
-    padding: 8px;
-    background-color: rgb(77, 65, 57);
-    border-radius: 8px;
-    color: white;
-    cursor: pointer;
-    font-family: sans-serif;
+    grid-template-columns: 1fr min-content;
 }
