Refactoring hooks and scss

--- a/client/pages/Main/components/DogSearch/style.scss
+++ b/client/pages/Main/components/DogSearch/style.scss
@@ -5,8 +5,8 @@
     margin: 0 auto;
     grid-auto-flow: row;
     row-gap: 20px;
-}
 
-.dogSearch__spinner {
-    margin: 0 auto;
+    &__spinner {
+        margin: 0 auto;
+    }
 }
