Breed define function

--- a/client/pages/Main/components/Uploader/Preview/style.scss
+++ b/client/pages/Main/components/Uploader/Preview/style.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     padding: 4px;
-    border: 1px solid var(--gainsboro);
+    border: 1px solid var(--gray);
     margin-left: 40px;
 
     @media (max-width: 600px) {
