--- a/client/html/index.ejs
+++ b/client/html/index.ejs
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title><%= htmlWebpackPlugin.options.title %></title>
+        <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="512x512"  href="/icons/android-chrome-512x512.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/icons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+        <link rel='shortcut icon' type='image/x-icon' href='/icons/favicon.ico' />
+
         <%= htmlWebpackPlugin.tags.headTags %>
     </head>
     <body>
