--- a/client/pages/Main/components/Uploader/style.scss
+++ b/client/pages/Main/components/Uploader/style.scss
@@ -6,5 +6,6 @@
     @media (max-width: 600px) {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
+        row-gap: 20px;
     }
 }
